Add NVIDIA Docker env

--- a/Dockerfile.centos7
+++ b/Dockerfile.centos7
@@ -8,6 +8,9 @@ RUN yum install viaai-stack -y
 
 CMD ["/usr/sbin/init"]
 
-
+# Setup for nvidia-docker
+ENV NVIDIA_VISIBLE_DEVICES all
+ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
+ENV NVIDIA_REQUIRE_CUDA "cuda>=10.0"
 
 
